--- a/FantasyEfmo.html
+++ b/FantasyEfmo.html
@@ -844,6 +844,7 @@
         {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'Lesionado'},
         {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'Lesionado'},
         {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'Lesionado'},
+        {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'Lesionado'},
         {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'Lesionado'}
       ]},
 
@@ -859,7 +860,8 @@
         {points:5, minutes:90, goals:0, assists:0, cards:0, comment:'(7,1)'},
         {points:null, minutes:10, goals:0, assists:0, cards:0, comment:'↩️ (-)'},
         {points:null, minutes:90, goals:0, assists:0, cards:0, comment:'(-)'},
-        {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'-'}
+        {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'-'},
+        {points:0, minutes:90, goals:0, assists:0, cards:0, comment:'(6,0)'}
       ]},
 
     { id:3, name:'Álvaro', pos:'Portero', status:'OK', special: false, performances:[
@@ -874,7 +876,8 @@
         {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'-'},
         {points:null, minutes:80, goals:0, assists:0, cards:0, comment:'↪️ (-)'},
         {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'-'},
-        {points:-3, minutes:90, goals:0, assists:0, cards:0, comment:'(5,0)'}
+        {points:-3, minutes:90, goals:0, assists:0, cards:0, comment:'(5,0)'},
+        {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'-'}
       ]},
 
     { id:4, name:'Luisja', pos:'Defensa', status:'OK', special: false, performances:[
@@ -889,7 +892,8 @@
         {points:6, minutes:90, goals:0, assists:0, cards:0, comment:'(7,3)'},
         {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'Lesionado'},
         {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'Lesionado'},
-        {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'Lesionado'}
+        {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'Lesionado'},
+        {points:5, minutes:90, goals:0, assists:0, cards:0, comment:'(7,0)'}
       ]},
 
     { id:5, name:'J. Martínez', pos:'Centrocampista', status:'Duda', special: false, performances:[
@@ -904,6 +908,7 @@
         {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'Sancionado'},
         {points:null, minutes:90, goals:0, assists:0, cards:1, comment:'🟨 (-)'},
         {points:null, minutes:87, goals:0, assists:0, cards:1, comment:'🟨↪️ (-)'},
+        {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'Lesionado'},
         {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'Lesionado'}
       ]},
 
@@ -919,6 +924,7 @@
         {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'Lesionado'},
         {points:null, minutes:90, goals:0, assists:0, cards:0, comment:'(-)'},
         {points:null, minutes:90, goals:0, assists:0, cards:0, comment:'(-)'},
+        {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'No convocado'},
         {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'No convocado'}
       ]},
 
@@ -934,7 +940,8 @@
         {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'Sancionado'},
         {points:null, minutes:45, goals:0, assists:0, cards:0, comment:'↪️ (-)'},
         {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'No convocado'},
-        {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'No convocado'}
+        {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'No convocado'},
+        {points:4, minutes:82, goals:0, assists:0, cards:0, comment:'↪️ (6,8)'}
       ]},
 
     { id:8, name:'Rodri', pos:'Defensa', status:'OK', special: false, performances:[
@@ -949,7 +956,8 @@
         {points:2, minutes:65, goals:0, assists:0, cards:0, comment:'↪️ (6,4)'},
         {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'-'},
         {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'Lesionado'},
-        {points:-2, minutes:90, goals:0, assists:0, cards:0, comment:'(5,6)'}
+        {points:-2, minutes:90, goals:0, assists:0, cards:0, comment:'(5,6)'},
+        {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'No convocado'}
       ]},
 
     { id:9, name:'Adriano', pos:'Defensa', status:'Duda', special: false, performances:[
@@ -964,7 +972,8 @@
         {points:8, minutes:90, goals:0, assists:1, cards:0, comment:'🅰️ (7,4+🅰️)'},
         {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'Lesionado'},
         {points:null, minutes:90, goals:0, assists:0, cards:0, comment:'(-)'},
-        {points:-1, minutes:90, goals:0, assists:0, cards:0, comment:'(5,8)'}
+        {points:-1, minutes:90, goals:0, assists:0, cards:0, comment:'(5,8)'},
+        {points:2, minutes:90, goals:0, assists:0, cards:0, comment:'(6,4)'}
       ]},
 
     { id:10, name:'Á. Infante', pos:'Defensa', status:'OK', special: false, performances:[
@@ -979,7 +988,8 @@
         {points:3, minutes:25, goals:0, assists:0, cards:0, comment:'↩️ (6,6)'},
         {points:null, minutes:45, goals:0, assists:0, cards:0, comment:'↩️ (-)'},
         {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'No convocado'},
-        {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'No convocado'}
+        {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'No convocado'},
+        {points:3, minutes:8, goals:0, assists:0, cards:0, comment:'↩️ (6,6)'}
       ]},
 
     { id:11, name:'A. Molina', pos:'Centrocampista', status:'Duda', special: false, performances:[
@@ -994,7 +1004,8 @@
         {points:3, minutes:15, goals:0, assists:0, cards:0, comment:'↩️ (6,7)'},
         {points:null, minutes:45, goals:0, assists:0, cards:0, comment:'↪️ (-)'},
         {points:null, minutes:3, goals:0, assists:0, cards:0, comment:'↩️ (-)'},
-        {points:5, minutes:90, goals:0, assists:1, cards:0, comment:'🅰️ (6,8+🅰️)'}
+        {points:5, minutes:90, goals:0, assists:1, cards:0, comment:'🅰️ (6,8+🅰️)'},
+        {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'Lesionado'}
       ]},
 
     { id:12, name:'L. Lausín', pos:'Defensa', status:'Lesionado', special: false, performances:[
@@ -1003,6 +1014,7 @@
         {points:2, minutes:20, goals:0, assists:0, cards:0, comment:'↩️ (6,5)'},
         {points:3, minutes:19, goals:0, assists:0, cards:0, comment:'↩️ (6,6)'},
         {points:3, minutes:21, goals:0, assists:0, cards:0, comment:'↩️ (6,7)'},
+        {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'Lesionado'},
         {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'Lesionado'},
         {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'Lesionado'},
         {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'Lesionado'},
@@ -1024,7 +1036,8 @@
         {points:8, minutes:90, goals:0, assists:1, cards:0, comment:'🅰️ (7,5+🅰️)'},
         {points:null, minutes:90, goals:0, assists:0, cards:0, comment:'(-)'},
         {points:null, minutes:90, goals:0, assists:0, cards:0, comment:'(-)'},
-        {points:1, minutes:90, goals:0, assists:0, cards:0, comment:'(6,2)'}
+        {points:1, minutes:90, goals:0, assists:0, cards:0, comment:'(6,2)'},
+        {points:4, minutes:90, goals:0, assists:0, cards:0, comment:'(6,9)'}
       ]},
 
     { id:14, name:'Kito', pos:'Centrocampista', status:'OK', special: false, performances:[
@@ -1039,7 +1052,8 @@
         {points:7, minutes:75, goals:0, assists:0, cards:0, comment:'↪️ (7,4)'},
         {points:null, minutes:45, goals:0, assists:1, cards:0, comment:'↩️🅰️ (0,0+🅰️)'},
         {points:null, minutes:45, goals:1, assists:1, cards:0, comment:'↩️⚽🅰️ (0,0+⚽+🅰️)'},
-        {points:3, minutes:33, goals:0, assists:0, cards:0, comment:'↩️ (6,7)'}
+        {points:3, minutes:33, goals:0, assists:0, cards:0, comment:'↩️ (6,7)'},
+        {points:11, minutes:74, goals:1, assists:0, cards:0, comment:'↪️⚽ (7,6+⚽)'}
       ]},
 
     { id:15, name:'Víctor Jaén', pos:'Centrocampista', status:'OK', special: false, performances:[
@@ -1054,7 +1068,8 @@
         {points:2, minutes:20, goals:0, assists:0, cards:0, comment:'↩️ (6,5)'},
         {points:null, minutes:10, goals:0, assists:0, cards:0, comment:'↩️ (-)'},
         {points:null, minutes:45, goals:0, assists:0, cards:0, comment:'↪️ (-)'},
-        {points:2, minutes:16, goals:0, assists:0, cards:0, comment:'↩️ (6,4)'}
+        {points:2, minutes:16, goals:0, assists:0, cards:0, comment:'↩️ (6,4)'},
+        {points:2, minutes:8, goals:0, assists:0, cards:0, comment:'↩️ (6,4)'}
       ]},
 
     { id:16, name:'Á. Brito', pos:'Centrocampista', status:'OK', special: false, performances:[
@@ -1069,7 +1084,8 @@
         {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'Lesionado'},
         {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'Lesionado'},
         {points:null, minutes:45, goals:0, assists:0, cards:0, comment:'↩️ (-)'},
-        {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'No convocado'}
+        {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'No convocado'},
+        {points:6, minutes:90, goals:0, assists:0, cards:0, comment:'(7,3)'}
       ]},
 
     { id:17, name:'Pablo', pos:'Centrocampista', status:'OK', special: false, performances:[
@@ -1084,7 +1100,8 @@
         {points:11, minutes:70, goals:1, assists:0, cards:0, comment:'↪️⚽ (7,4+⚽)'},
         {points:null, minutes:80, goals:0, assists:0, cards:1, comment:'🟨↪️ (-)'},
         {points:null, minutes:82, goals:0, assists:0, cards:0, comment:'↪️ (-)'},
-        {points:1, minutes:90, goals:0, assists:0, cards:0, comment:'(6,2)'}
+        {points:1, minutes:90, goals:0, assists:0, cards:0, comment:'(6,2)'},
+        {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'No convocado'}
       ]},
 
     { id:18, name:'Javi Pardo', pos:'Centrocampista', status:'OK', special: false, performances:[
@@ -1099,7 +1116,8 @@
         {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'Lesionado'},
         {points:null, minutes:90, goals:1, assists:0, cards:0, comment:'⚽ (0,0+⚽)'},
         {points:null, minutes:45, goals:0, assists:0, cards:0, comment:'↩️ (-)'},
-        {points:1, minutes:74, goals:0, assists:0, cards:0, comment:'↪️ (6,3)'}
+        {points:1, minutes:74, goals:0, assists:0, cards:0, comment:'↪️ (6,3)'},
+        {points:2, minutes:90, goals:0, assists:0, cards:1, comment:'🟨 (6,5)'}
       ]},
 
     { id:19, name:'Mario', pos:'Centrocampista', status:'OK', special: false, performances:[
@@ -1114,7 +1132,8 @@
         {points:6, minutes:90, goals:0, assists:0, cards:0, comment:'(7,3)'},
         {points:null, minutes:45, goals:0, assists:0, cards:0, comment:'↪️ (-)'},
         {points:null, minutes:8, goals:0, assists:0, cards:0, comment:'↩️ (-)'},
-        {points:5, minutes:90, goals:0, assists:0, cards:0, comment:'(7,0)'}
+        {points:5, minutes:90, goals:0, assists:0, cards:0, comment:'(7,0)'},
+        {points:3, minutes:16, goals:0, assists:0, cards:0, comment:'↩️ (6,6)'}
       ]},
 
     { id:20, name:'J. Ogayar', pos:'Centrocampista', status:'OK', special: false, performances:[
@@ -1129,7 +1148,8 @@
         {points:3, minutes:90, goals:0, assists:0, cards:0, comment:'(6,7)'},
         {points:null, minutes:90, goals:0, assists:0, cards:0, comment:'(-)'},
         {points:null, minutes:82, goals:0, assists:0, cards:0, comment:'↪️ (-)'},
-        {points:9, minutes:90, goals:1, assists:0, cards:0, comment:'⚽ (7,2+⚽)'}
+        {points:9, minutes:90, goals:1, assists:0, cards:0, comment:'⚽ (7,2+⚽)'},
+        {points:5, minutes:90, goals:0, assists:0, cards:0, comment:'(7,0)'}
       ]},
 
     { id:21, name:'Rodri de Castro', pos:'Atacante', status:'OK', special: false, performances:[
@@ -1144,7 +1164,8 @@
         {points:5, minutes:75, goals:0, assists:0, cards:0, comment:'↪️ (7,0)'},
         {points:null, minutes:45, goals:0, assists:0, cards:0, comment:'↩️ (-)'},
         {points:null, minutes:45, goals:0, assists:0, cards:0, comment:'↪️ (-)'},
-        {points:3, minutes:57, goals:0, assists:0, cards:0, comment:'↪️ (6,7)'}
+        {points:3, minutes:57, goals:0, assists:0, cards:0, comment:'↪️ (6,7)'},
+        {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'No convocado'}
       ]},
 
     { id:22, name:'H. Panizo', pos:'Atacante', status:'Lesionado', special: false, performances:[
@@ -1159,7 +1180,8 @@
         {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'No convocado'},
         {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'No convocado'},
         {points:null, minutes:8, goals:0, assists:0, cards:0, comment:'↩️ (-)'},
-        {points:4, minutes:74, goals:0, assists:0, cards:0, comment:'↪️ (6,8)'}
+        {points:4, minutes:74, goals:0, assists:0, cards:0, comment:'↪️ (6,8)'},
+        {points:9, minutes:82, goals:0, assists:1, cards:0, comment:'↪️🅰️ (7,6+🅰️)'}
       ]},
 
     { id:23, name:'Manu Medina', pos:'Atacante', status:'Duda', special: false, performances:[
@@ -1174,6 +1196,7 @@
         {points:1, minutes:15, goals:0, assists:0, cards:0, comment:'↩️ (6,3)'},
         {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'-'},
         {points:null, minutes:45, goals:0, assists:0, cards:0, comment:'↪️ (-)'},
+        {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'Lesionado'},
         {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'Lesionado'}
       ]},
 
@@ -1189,7 +1212,8 @@
         {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'Lesionado'},
         {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'Lesionado'},
         {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'Lesionado'},
-        {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'Lesionado'}
+        {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'Lesionado'},
+        {points:2, minutes:32, goals:0, assists:0, cards:0, comment:'↩️ (6,4)'}
       ]},
 
     { id:25, name:'S. Griñán', pos:'Atacante', status:'OK', special: false, performances:[
@@ -1204,7 +1228,8 @@
         {points:8, minutes:90, goals:1, assists:0, cards:0, comment:'⚽ (7,0+⚽)'},
         {points:null, minutes:90, goals:0, assists:0, cards:0, comment:'(-)'},
         {points:null, minutes:90, goals:2, assists:0, cards:0, comment:'⚽⚽ (0,0+⚽⚽)'},
-        {points:2, minutes:16, goals:0, assists:0, cards:0, comment:'↩️ (6,4)'}
+        {points:2, minutes:16, goals:0, assists:0, cards:0, comment:'↩️ (6,4)'},
+        {points:2, minutes:58, goals:0, assists:0, cards:0, comment:'↪️ (6,5)'}
       ]},
 
     { id:26, name:'Manu (JB)', pos:'Defensa', status:'OK', special: true, performances:[
