--- a/InformeJ14.html
+++ b/InformeJ14.html
@@ -736,35 +736,34 @@
       // MODIFICADO: Agregar campo 'cards' a cada jugador
       const playersConfirmada = {
         'portero': [
-          { number: '00', name: 'AAA', rating: '00', goals: 0, assists: 0, cards: null }
+          { number: '1', name: 'Gabri', rating: '6,4', goals: 0, assists: 0, cards: null }
         ],
         'defensas': [
-          { number: '00', name: 'AAA', rating: '00', goals: 0, assists: 0, cards: null },
-          { number: '00', name: 'AAA', rating: '00', goals: 0, assists: 0, cards: null },
-          { number: '00', name: 'AAA', rating: '00', goals: 0, assists: 0, cards: null },
-          { number: '00', name: 'AAA', rating: '00', goals: 0, assists: 0, cards: null }
+          { number: '7', name: 'J. Martínez', rating: '6,8', goals: 0, assists: 0, cards: null },
+          { number: '5', name: 'Adriano', rating: '7,0', goals: 0, assists: 0, cards: null },
+          { number: '25', name: 'Rodri', rating: '6,9', goals: 0, assists: 0, cards: '🟨' },
+          { number: '17', name: 'J. Zarcero', rating: '6,6', goals: 0, assists: 0, cards: '🟨' }
         ], //El último sin coma
         'mediocentros': [
-          { number: '00', name: 'AAA', rating: '00', goals: 0, assists: 0, cards: null },
-          { number: '00', name: 'AAA', rating: '00', goals: 0, assists: 0, cards: null },
-          { number: '00', name: 'AAA', rating: '00', goals: 0, assists: 0, cards: null },
-          { number: '00', name: 'AAA', rating: '00', goals: 0, assists: 0, cards: null },
-          { number: '00', name: 'AAA', rating: '00', goals: 0, assists: 0, cards: null }
+          { number: '10', name: 'Kito', rating: '7,4', goals: 0, assists: 1, cards: '🟨' },
+          { number: '2', name: 'Á. Brito', rating: '6,9', goals: 0, assists: 0, cards: null },
+          { number: '14', name: 'J. Ogayar', rating: '7,1', goals: 0, assists: 0, cards: null },
+          { number: '23', name: 'Javi Pardo', rating: '6,7', goals: 0, assists: 0, cards: null },
+          { number: '8', name: 'Rodri de Castro', rating: '6,6', goals: 0, assists: 0, cards: '🟨' }
         ], //El último sin coma
         'delanteros': [
-          { number: '00', name: 'AAA', rating: '00', goals: 0, assists: 0, cards: null }
+          { number: '18', name: 'Manu de V.', rating: '6,4', goals: 0, assists: 0, cards: null }
         ] //El último sin coma
       };
 
       // Datos del banquillo - MODIFICADO: Agregar campo 'cards'
       const benchPlayers = [
-        { number: '00', name: 'AAA', rating: '00', goals: 0, assists: 0, cards: null },
-        { number: '00', name: 'AAA', rating: '00', goals: 0, assists: 0, cards: null },
-        { number: '00', name: 'AAA', rating: '00', goals: 0, assists: 0, cards: null },
-        { number: '00', name: 'AAA', rating: '00', goals: 0, assists: 0, cards: null },
-        { number: '00', name: 'AAA', rating: '00', goals: 0, assists: 0, cards: null },
-        { number: '00', name: 'AAA', rating: '00', goals: 0, assists: 0, cards: null },
-        { number: '00', name: 'AAA', rating: '00', goals: 0, assists: 0, cards: null }
+        { number: '13', name: 'Álvaro', rating: '-', goals: 0, assists: 0, cards: null },
+        { number: '3', name: 'Mario', rating: '6,5', goals: 0, assists: 0, cards: null },
+        { number: '21', name: 'Víctor Jaén', rating: '6,6', goals: 0, assists: 0, cards: null },
+        { number: '19', name: 'Pablo', rating: '6,4', goals: 0, assists: 0, cards: null },
+        { number: '20', name: 'A. Molina', rating: '6,7', goals: 0, assists: 0, cards: null },
+        { number: '9', name: 'S. Griñán', rating: '7,2', goals: 1, assists: 0, cards: null }
       ]; //El último sin coma
 
       // Configuraciones de formaciones <!-- Cambiar formación en caso necesario -->
@@ -935,19 +934,51 @@
     </div>
   </div> 
 
-  <!-- Cambios 
+  <!-- Cambios -->
   <div class="seccion">
     <h3>Cambios Realizados</h3>
     <div class="cambios-lista">
       <div class="cambio">
-        <span class="minuto">00'</span>
+        <span class="minuto">45'</span>
         <div class="jugadores-cambio">
-          <span>AAA</span>
+          <span>Rodri de C.</span>
           <span class="flecha">→</span>
-          <span>AAA</span>
+          <span>Pablo</span>
         </div>
       </div>
-  </div> -->
+      <div class="cambio">
+        <span class="minuto">59'</span>
+        <div class="jugadores-cambio">
+          <span>Manu de V.</span>
+          <span class="flecha">→</span>
+          <span>S. Griñán</span>
+        </div>
+      </div>
+      <div class="cambio">
+        <span class="minuto">73'</span>
+        <div class="jugadores-cambio">
+          <span>Á. Brito</span>
+          <span class="flecha">→</span>
+          <span>Mario</span>
+        </div>
+      </div>
+      <div class="cambio">
+        <span class="minuto">73'</span>
+        <div class="jugadores-cambio">
+          <span>Javi Pardo</span>
+          <span class="flecha">→</span>
+          <span>A. Molina</span>
+        </div>
+      </div>
+      <div class="cambio">
+        <span class="minuto">79'</span>
+        <div class="jugadores-cambio">
+          <span>J. Zarcero</span>
+          <span class="flecha">→</span>
+          <span>Víctor Jaén</span>
+        </div>
+      </div>
+  </div> 
 
   <!-- Once Final -->
   <div class="seccion">
